--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
  "name": "deep-jquery-http",
-  "description": "deepjs/jquery/ajax http client",
+ "description": "deepjs/jquery/ajax http client",
  "author": {
   "name": "Gilles Coomans",
   "email": "gilles.coomans@gmail.com"
  },
- "version": "0.3.0",
- "contributors": [
- ],
+ "version": "0.3.1",
+ "contributors": [],
  "keywords": [
   "jquery",
   "nodejs",
